# pipelines-from-scratch-model

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  Dockerfile  LICENSE  README.md  pipeline.yaml  pyproject.toml  requirements.txt  security-constraints.txt
.github/workflows/: lint.yaml  release.yaml  test.yaml
notebooks/: experiments.ipynb  local-development.ipynb
src/pipelines_from_scratch/: components.py  pipelines.py
