[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pipelines-from-scratch"
dynamic = ["version"]
requires-python = "~=3.10"
dependencies = ["kfp", "docker"]

[project.optional-dependencies]
# NOTE: ruff version should be kept in sync with the one declared in
# .pre-commit-config.yaml. Ruff added as dev dependency for developer
# convinience
dev = ["jupyterlab", "pre-commit", "ruff==0.8.0"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "node-and-timestamp"

[tool.ruff.lint]
extend-select = ["I", "TID252"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
# NOTE: Disallow all relative imports. Package / Module discovery is somewhat brittle
# in KFP, so we help it a little by only allowing absolute imports.
ban-relative-imports = "all"
